[package]
name = "tk-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust library for token signing and verification"
license = "MIT"
repository = "https://github.com/yourusername/tk-rs"
documentation = "https://docs.rs/tk-rs"
readme = "README.md"
keywords = ["token", "signing", "verification", "cryptography"]
categories = ["cryptography", "authentication"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
p256 = { version = "0.13", features = ["ecdsa"] }
anyhow = "1.0.95"
chrono = "0.4.39"
hex = "0.4.3"
serde_json = "1.0.135"
solana-sdk = "2.1.9"
solana-program = "2.1.9"

[lib]
name = "tk_rs"
path = "src/lib.rs"
